--- a/src/style/About_us.css
+++ b/src/style/About_us.css
@@ -1,15 +1,26 @@
 .about_us {
-  width: 1230px;
+  width: 100%;
+  max-width: 1230px;
   margin: 100px auto;
 }
-
+@media (max-width:767px) {
+  .about_us {
+    margin:100px 0;
+  }
+}
 .about_us .container {
-  /* background-color: blanchedalmond; */
   position: relative;
   width: 100%;
   display: grid;
   grid-template-columns: 420px 760px;
   gap: 48px;
+}
+
+@media (max-width:767px) {
+  
+.about_us .container {
+  grid-template-columns: 100%;
+}
 }
 
 @media (min-width: 1200px) and (max-width: 1399px) {
@@ -19,7 +30,7 @@
 }
 .about_us .container .building_block {
   position: relative;
-  width: 420px;
+  /* width: 420px; */
   height: 650px;
   /* border: 2px solid black; */
 }
@@ -30,28 +41,63 @@
   position: absolute;
   top: 0;
   right: 0;
-  /* outline: 2px solid red; */
+  /* border: 3px solid rgb(204, 20, 20); */
+}
+
+@media (max-width:767px){
+.about_us .container .building_block .building {
+width: 100%;
+background-color: azure;
+}
 }
 .about_us .container .building_block .building img {
-  width: 100%;
+  max-width: 100%;
   height: 100%;
   object-fit: cover;
 }
+
+@media (max-width:767px){
+  .about_us .container .building_block .building img {
+  
+  }
+  }
 
 .about_us .container .building_block .arx_logo {
   width: 208px;
   height: 176px;
+  background-color: #F1F3F3;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   left: 0;
   bottom: 0;
-  /* outline: 2px solid red; */
+box-shadow:5px 5px 15px 0px #4A4A4A26;
+}
+
+@media (max-width:767px){
+  .about_us .container .building_block .arx_logo {
+    width: 109.65434265136719px;
+    height: 124.82377624511719px;
+    margin-left: 33px;
+  }
 }
 
 .about_us .container .building_block .arx_logo img {
-  width: 100%;
-  height: 100%;
+  width:128px;
+  height: 101px;
   object-fit: cover;
-  margin-left: -5px;
+}
+
+@media (max-width:767px) {
+  .about_us .container .building_block .arx_logo img{
+    width: 67.2074966430664px;
+    height: 71.65808868408203px;
+    /* top: 387.58px; */
+
+    
+  }
 }
 
 .about_us .container .about_info {
@@ -67,11 +113,28 @@
   text-align: start;
 }
 
-.about_us .container .about_info .about_goals {
-  display: grid;
-  grid-template-columns: repeat(3, 235px);
-  gap: 24px;
+@media (max-width:767px) {
+  .about_us .container .about_info .about-title {
+    justify-content:center;
+    align-items:center;
+    text-align: center;
+  }
 }
+
+.about_us .container .about_info .about_goals {
+  display: flex;
+  gap: 24px;
+  /* background-color: cadetblue; */
+}
+
+@media (max-width:767px) {
+  .about_us .container .about_info .about_goals{
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
 .about_us .container .about_info .about_goals .goal {
   /* outline: 2px solid red;   */
   display: flex;
@@ -80,6 +143,14 @@
   align-items: flex-start;
   padding: 10px;
   gap: 24px;
+  /* background-color: bisque; */
+}
+
+@media (max-width:767px) {
+  .about_us .container .about_info .about_goals .goal {
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .about_us .container .about_info .about_goals .goal img {
@@ -87,11 +158,25 @@
   height: 56px;
 }
 
+@media (max-width:767px){
+  .about_us .container .about_info .about_goals .goal img {
+    width: 36px;
+    height: 36px;
+  }
+}
+
+
 .about_us .container .about_info .about_goals .goal p.goal-title {
   font-family: "Lato";
   font-weight: 700;
   font-size: 20px;
   color: #060b0e;
+}
+
+@media (max-width:767px){
+  .about_us .container .about_info .about_goals .goal p.goal-title {
+  font-size: 14px;
+  }
 }
 
 .about_us .container .about_info .about_goals .goal p.goal_des {
@@ -102,3 +187,13 @@
   line-height:25px;
   color: #2f3e46;
 }
+
+@media (max-width:767px){
+  .about_us .container .about_info .about_goals .goal p.goal_des {
+  font-size: 13px;
+  width:149px;
+  height: 160px;
+  text-align:center;
+  }
+}
+
