--- a/src/style/section_title.css
+++ b/src/style/section_title.css
@@ -7,6 +7,7 @@
    text-align: center;
 }
 
+
 .section_title h4{
 color: #035B8D;
 font-weight: 700;
@@ -16,9 +17,29 @@ margin-bottom: 30px;
 }
 
 
+@media (max-width:767px) {
+    
+.section_title h4{
+font-size: 20px;
+text-align: center;
+}
+}
+
+
 .section_title h2{
     width: 800px;
     font-weight: 700;
     font-size:48px;
-    font-family: 'Cinzel';
+    /* font-family: 'Cinzel'; */
+}
+
+
+@media (max-width:767px) {
+    
+.section_title h2{
+    width:305px;
+    font-size:16px;
+    /* text-align: center; */
+
+}
 }
