--- a/src/style/About_us.css
+++ b/src/style/About_us.css
@@ -122,6 +122,7 @@ box-shadow:5px 5px 15px 0px #4A4A4A26;
 }
 
 .about_us .container .about_info .about_goals {
+
   display: flex;
   gap: 24px;
   /* background-color: cadetblue; */
@@ -136,13 +137,14 @@ box-shadow:5px 5px 15px 0px #4A4A4A26;
 }
 
 .about_us .container .about_info .about_goals .goal {
-  /* outline: 2px solid red;   */
+  height: 320px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+  flex-basis: 240px;
   padding: 10px;
-  gap: 24px;
+  gap: 16px;
   /* background-color: bisque; */
 }
 
@@ -181,12 +183,13 @@ box-shadow:5px 5px 15px 0px #4A4A4A26;
 
 .about_us .container .about_info .about_goals .goal p.goal_des {
   font-family: "Lato";
-  width: 232px;
   font-weight: 400;
   font-size: 18px;
-  line-height:25px;
+  line-height:29px;
+  letter-spacing: 1px;
   color: #2f3e46;
 }
+
 
 @media (max-width:767px){
   .about_us .container .about_info .about_goals .goal p.goal_des {
