--- a/src/style/Services.css
+++ b/src/style/Services.css
@@ -7,12 +7,12 @@
   margin: 50px 0;
 }
 .services .services-content {
-  max-width: 1230px;
+  max-width: 1200px;
   display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(220px,1fr));
+  grid-template-columns: repeat(auto-fit,minmax(320px,auto));
   gap: 30px;
-  justify-items: center; /* Centers the items horizontally */
   justify-content: center; /* Centers the items vertically */
+  justify-items: center; /* Centers the items horizontally */
   margin:0 auto;
   /* background-color: bisque; */
 }
@@ -29,6 +29,7 @@
   flex-direction: column;
   align-items: center;
   gap: 30px;
+  width: 320px;
 /* background-color: cadetblue; */
 }
 
