--- a/src/style/About_us.css
+++ b/src/style/About_us.css
@@ -2,8 +2,10 @@
   width: 100%;
   max-width: 1230px;
   margin: 100px auto;
+  /* background-color: aqua; */
+overflow: hidden;
 }
-@media (max-width:767px) {
+@media (max-width:991px) {
   .about_us {
     margin:100px 0;
   }
@@ -16,21 +18,30 @@
   gap: 48px;
 }
 
-@media (max-width:767px) {
-  
+@media (max-width:991px) {
 .about_us .container {
-  grid-template-columns: 100%;
+  grid-template-columns: auto;
 }
 }
 
-@media (min-width: 1200px) and (max-width: 1399px) {
+@media (min-width: 992px) and (max-width: 1200px) {
+ .about_us .container {
+  position: relative;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  gap: 28px;
+}
+
+}
+
+@media (min-width: 1201px) and (max-width: 1399px) {
   .about_us .container {
     width: 1230px;
   }
 }
 .about_us .container .building_block {
   position: relative;
-  /* width: 420px; */
   height: 650px;
   /* border: 2px solid black; */
 }
@@ -44,23 +55,23 @@
   /* border: 3px solid rgb(204, 20, 20); */
 }
 
-@media (max-width:767px){
+@media (max-width:991px){
 .about_us .container .building_block .building {
 width: 100%;
-background-color: azure;
+/* background-color: azure; */
 }
 }
+
+@media (min-width: 992px) and (max-width: 1200px) {
+
+}
+
 .about_us .container .building_block .building img {
-  max-width: 100%;
+width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-@media (max-width:767px){
-  .about_us .container .building_block .building img {
-  
-  }
-  }
 
 .about_us .container .building_block .arx_logo {
   width: 208px;
@@ -76,6 +87,12 @@ background-color: azure;
 box-shadow:5px 5px 15px 0px #4A4A4A26;
 }
 
+.about_us .container .building_block .arx_logo img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 @media (max-width:767px){
   .about_us .container .building_block .arx_logo {
     width: 109.65434265136719px;
@@ -84,10 +101,25 @@ box-shadow:5px 5px 15px 0px #4A4A4A26;
   }
 }
 
+
+@media (min-width:768px) and (max-width:991px){
+  .about_us .container .building_block .arx_logo {
+    margin-left: 33px;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1200px) {
+ .about_us .container .building_block .arx_logo {
+  width: 180px;
+  height: 140px;
+
+}
+
 .about_us .container .building_block .arx_logo img {
   width:128px;
   height: 101px;
   object-fit: cover;
+}
 }
 
 @media (max-width:767px) {
@@ -95,8 +127,6 @@ box-shadow:5px 5px 15px 0px #4A4A4A26;
     width: 67.2074966430664px;
     height: 71.65808868408203px;
     /* top: 387.58px; */
-
-    
   }
 }
 
@@ -106,6 +136,11 @@ box-shadow:5px 5px 15px 0px #4A4A4A26;
   gap: 48px;
 }
 
+
+@media (min-width: 992px) and (max-width: 1200px) {
+
+}
+
 .about_us .container .about_info .about-title {
   display: flex;
   justify-content: flex-start;
@@ -113,7 +148,7 @@ box-shadow:5px 5px 15px 0px #4A4A4A26;
   text-align: start;
 }
 
-@media (max-width:767px) {
+@media (max-width:991px) {
   .about_us .container .about_info .about-title {
     justify-content:center;
     align-items:center;
@@ -128,13 +163,30 @@ box-shadow:5px 5px 15px 0px #4A4A4A26;
   /* background-color: cadetblue; */
 }
 
-@media (max-width:767px) {
+
+@media (min-width: 1201px) and (max-width: 1399px) {
+  .about_us .container {
+    width: 1230px;
+  }
+}
+
+@media (max-width:991px) {
   .about_us .container .about_info .about_goals{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
   }
 }
+
+
+@media (min-width: 992px) and (max-width: 1200px) {
+  .about_us .container .about_info .about_goals{
+    flex-wrap: wrap;
+    gap:12px;
+
+  }
+}
+
 
 .about_us .container .about_info .about_goals .goal {
   height: 320px;
@@ -147,7 +199,11 @@ box-shadow:5px 5px 15px 0px #4A4A4A26;
   gap: 16px;
   /* background-color: bisque; */
 }
-
+@media (min-width: 992px) and (max-width: 1200px) {
+  .about_us .container .about_info .about_goals .goal{
+    flex-basis: 215px;
+  }
+}
 @media (max-width:767px) {
   .about_us .container .about_info .about_goals .goal {
     justify-content: center;
@@ -200,3 +256,9 @@ box-shadow:5px 5px 15px 0px #4A4A4A26;
   }
 }
 
+@media (min-width: 992px) and (max-width: 1200px) {
+.about_us .container .about_info .about_goals .goal p.goal_des {
+  font-size: 16px;
+
+}
+}
