--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -8,12 +8,21 @@
   margin-top: -100px;
 }
 
+@media (max-width:991px) {
+  .footer-box{
+    margin: 200px 0 0;
+  }
+
+  .footer-box .footer-sub {
+    margin-top: -120px;
+  }
+}
+
 .footer {
   margin-top: 150px;
   position: relative;
   background-image: linear-gradient(to right, #494d50, #1c2023);
   width: 100%;
-  /* height: 720px; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -37,12 +46,39 @@
 }
 
 .footer .box-col {
-  width: 1266px;
+  max-width: 1266px;
   height: 352px;
   /* background-color: bisque; */
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 118px;
+}
+
+@media (max-width:767px) {
+  .footer .box-col {
+    padding-left: 50px;
+    height: 100%;
+    grid-template-columns:1fr;
+    gap: 16px;
+  }
+}
+
+
+@media (min-width:768px) and (max-width:991px) {
+  .footer .box-col {
+    padding-left: 50px;
+    height: 100%;
+      grid-template-columns: repeat(3, 1fr);
+    gap:40px;
+  }
+}
+
+@media (min-width:992px) and (max-width:1200px) {
+  .footer .box-col {
+    padding-left: 50px;
+    height: 100%;
+    gap:40px;
+  }
 }
 .footer .box-col .footer-cols {
   padding-top: 15px;
@@ -52,6 +88,7 @@
   font-weight: 700;
   font-size: 20px;
 }
+
 
 .footer .box-col .footer-cols ul li a {
   font-weight: 400px;
@@ -65,12 +102,23 @@
   width: 171px;
   height: 80px;
 }
+
+@media (max-width:767px) {
+  .footer .box-col .col-logo img {
+    margin-left: -35px;
+  }
+}
 .footer .box-col .col-logo p {
   font-weight: 700;
   font-size: 14px;
   line-height: 24px;
   color: white;
   letter-spacing: 1px;
+}
+@media (max-width:767px) {
+.footer .box-col .col-logo p {
+width: 240px;
+}
 }
 .footer .box-col .col-logo .locations,
 .footer .box-col .col-logo .mail,
@@ -115,13 +163,32 @@
   background-color: white;
 }
 
+@media (max-width:767px) {
+  .footer::after {
+    margin: 110px auto;
+  }
+}
+
 .footer .footer-social {
   /* background-color: rgb(200, 0, 255); */
-  width: 1266px;
+  width: 100%;
+  max-width: 1266px;
   height: 70px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+@media (max-width:767px) {
+.footer .footer-social {
+  flex-direction: column;
+  gap: 16px;
+}
+}
+
+@media (min-width:768px) and (max-width:1200px) {
+.footer .footer-social {
+  padding: 0 20px;
+}
 }
 
 .footer .footer-social .copyright p {
