--- a/src/style/Subscribtion.css
+++ b/src/style/Subscribtion.css
@@ -1,81 +1,155 @@
-.subscribtion{
-    background-image: linear-gradient(to right, #494D50, #060B0E);
-margin: 50px auto;
-height: 200px;
-width: 1205px;
-border-radius: 12px;
-display: flex;
-justify-content: center;
-align-items: center;
+.subscribtion {
+  background-image: linear-gradient(to right, #494d50, #060b0e);
+  margin: 50px auto;
+  height: 200px;
+  width: 100%;
+  max-width: 1205px;
+  border-radius: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (min-width:992px) and (max-width:1200px) {
+  .subscribtion{
+    padding: 2px 20px;
+  }
+}
+@media (max-width: 991px) {
+  .subscribtion {
+    width: 96%;
+    height: 235px;
+    flex-direction: column;
+  }
 }
 
 .subscribtion .sub-content {
-    width: 1028px;
-    height: 128px;
-    /* background-color: chartreuse; */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  width: 100%;
+  max-width:1028px;
+  height: 128px;
+  /* background-color: chartreuse; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.subscribtion .sub-content .subscribe-info{
-width: 420px;
-display: flex;
-flex-direction: column;
-gap: 24px;
-/* background-color: rgb(199, 123, 30); */
+@media (max-width: 767px) {
+ .subscribtion .sub-content {
+  height: 180px;
+ flex-direction: column;
+ gap: 16px;
+ align-items: flex-start;
+}
 }
 
-.subscribtion .sub-content .subscribe-info p{
-    color: white;
-    font-family: 'Lato';
+@media (min-width: 768px) and (max-width:991px) {
+ .subscribtion .sub-content {
+  height: 180px;
+ flex-direction: column;
+ gap: 16px;
+ align-items: center;
+}
 }
 
-.subscribtion .sub-content .subscribe-info p:nth-of-type(1){
-font-weight: 700;
-font-size: 20px;
-line-height: 40px;
-
-}
-.subscribtion .sub-content .subscribe-info p:nth-of-type(2){
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 32px;
+.subscribtion .sub-content .subscribe-info {
+  width: 420px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  /* background-color: rgb(199, 123, 30); */
 }
 
-
-.subscribtion .sub-content .subscribe-input{
-    width: 448px;
-    height: 48px;
-    background-color: white;
-    padding: 20px 0;
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
+@media (max-width: 767px) {
+  .subscribtion .sub-content .subscribe-info {
+    width: 200px;
+    height: 116px;
+    /* background-color: #035b8d; */
+  justify-content: center;
     gap: 8px;
-    border-radius: 8px;
-    font-family: 'Lato';
-    }
+  }
+}
 
-    .subscribtion .sub-content .subscribe-input input{
-border: none;
-      width: 100%;
-      background-color: white;
-      font-size: 14px;
-      padding: 10px;
-    }
+.subscribtion .sub-content .subscribe-info p {
+  color: white;
+  font-family: "Lato";
+  letter-spacing: 1px;
+}
 
-    .subscribtion .sub-content .subscribe-input input:focus{
-        outline: none;
-    }
+.subscribtion .sub-content .subscribe-info p:nth-of-type(1) {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 40px;
+}
+.subscribtion .sub-content .subscribe-info p:nth-of-type(2) {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 32px;
+}
 
-    .subscribtion .sub-content .subscribe-input button{
-        background-color: #035B8D;
-        color: white;
-        padding: 10px;
-        width: 160px;
-        height: 48px;
-        border:none;
-        border-radius: 8px;
-        font-size: 14px;
+@media (max-width: 767px) {
+  .subscribtion .sub-content .subscribe-info{
+    padding-left: 15px;
+  }
+  .subscribtion .sub-content .subscribe-info p:nth-of-type(1) {
+    font-size: 16px;
+    line-height: 24px
+  }
+  .subscribtion .sub-content .subscribe-info p:nth-of-type(2) {
+    font-size: 14px;
+  line-height: 20px;
+
+  }
+}
+
+.subscribtion .sub-content .subscribe-input {
+  width: 448px;
+  height: 48px;
+  background-color: white;
+  padding: 20px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 8px;
+  border-radius: 8px;
+  font-family: "Lato";
+}
+
+
+@media (max-width: 767px) {
+    .subscribtion .sub-content .subscribe-input {
+  width:95%;
+  margin: auto;
+
+}
+
+}
+
+
+.subscribtion .sub-content .subscribe-input input {
+  border: none;
+  width: 100%;
+  background-color: white;
+  font-size: 14px;
+  padding: 10px;
+}
+
+.subscribtion .sub-content .subscribe-input input:focus {
+  outline: none;
+}
+
+.subscribtion .sub-content .subscribe-input button {
+  background-color: #035b8d;
+  color: white;
+  padding: 10px;
+  width: 160px;
+  height: 48px;
+  border: none;
+  border-radius: 8px;
+  font-size: 14px;
+}
+
+@media (max-width:767px) {
+    .subscribtion .sub-content .subscribe-input button {
+        width: 123px;
     }
+}
