--- a/src/style/Slider.css
+++ b/src/style/Slider.css
@@ -1,199 +1,116 @@
-.slider{
-position: relative;
-color: white;
-}
-
-.slider img{
-    width: 100%;
-}
-
-.slider .title{
-position: absolute;
-top:0;
-margin:200px 150px;
-}
-
-
-.slider .description{
-    width: 250px;
-position: absolute;
-top:50%;
-left: 50%;
-font-weight: 600;
-font-size: 1.3rem;
-word-spacing: 5px;
-}
-
-
-
-
-.slider .description::before{
-    content: "";
-    position: absolute;
-   top:0;
-   left: 0;
-   margin-left: -20px;
-    width: 4px;
-    height: 100%;
-    background-color: rgb(255, 255, 255);
-}
-
-.slider .search{
-    display: none;
-    color: black;
-    width: 90%;
-    height:60px;
-    padding: 10px;
-    background-color: white;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin:100px auto ;
-    /* display: flex;
-    justify-content:space-between;
-    align-items: center;
-    gap: 30px; */
-    border-radius: 30px;
-}
-.slider .search input{
-    width: 100%;
-    margin: auto !important;
-    font-size: 1.1rem;
-    padding: 10px 0;
-    text-indent: 20px;
-    border: none;
-    outline: none;
-}
-
-.slider .search input::placeholder{
-    font-weight: 600;
-    font-size: 1rem;
-}
-
-
-
-
-.slider .search_box_icons{
-display: flex;
-justify-content: center;
-align-items: center;
-gap: 10px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*      --------------------------mobile------------------
-
-.slider {
-  position: relative;
-  color: white;
-}
-.slider img {
+* {
   margin: 0;
-  width: 390px;
-  height:100vh;
+  padding: 0;
+  box-sizing: border-box;
+}
+.parent {
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(220, 216, 216);
+  position: relative;
+  display: flex;
+  justify-content: center;
 }
 
-.slider .title {
+.parent .slider-wrapper {
+  width: 100%;
+}
+
+.slider-wrapper .card-img {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.slider-wrapper .card-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.parent .pagination {
+  /* background-color: aqua; */
+  display: flex;
+  justify-content: center;
   position: absolute;
-  top: 0;
-  margin-top: 100px;
-  margin-left: 20px;
+  right: -150px;
+  top: 50%;
+  transform: rotate(-270deg);
+  z-index: 20;
 }
 
-.slider .description {
-  width: 250px;
+.parent .pagination span {
+  position: relative;
+  width: 256px;
+  height: 256px;
+  border-radius: 50%;
+  /* overflow: hidden; */
+  margin: 0 40px;
+  /* background-color: #ccc; */
+  display: inline-block;
+  cursor: pointer;
+  transform: scale(1);
+  transition: transform 0.5s ease-in-out;
+}
+
+.parent .pagination span.active .circles {
+  width:350px;
+  height:350px;
+  /* background-color: aquamarine; */
   position: absolute;
-  top: 40%;
-  margin-left: 40px;
+  right: 40%;
+  bottom: 40%;
+  transform: translate(50%,50%);
+  z-index: -1;
+  border-radius: 50%;
+  border:40px solid rgba(255, 255, 255, 0.217);
+}
+.pagination span.active:nth-of-type(1) {
+  /* background-color: red; */
+ margin: 20px;
 }
 
-.slider .description::before{
+.pagination span.active div.circles:nth-of-type(2) {
+  /* background-color: green; */
+ margin: 20px;
+
+}
+
+.pagination span.active div.circles:nth-of-type(3) {
+  /* background-color: blue; */
+ margin: 30px;
+
+}
+
+.pagination span.active div.circles:nth-of-type(4) {
+  /* background-color: rgb(4, 246, 69); */
+margin: 40px;
+}
+
+.pagination span.active div.circles:nth-of-type(5) {
+  /* background-color: rgb(92, 68, 186); */
+  margin: 50px;
+}
+
+.parent .pagination span img {
+  width: 256px;
+  height: 256px;
+  border-radius: 50%;
+  transform: rotate(-90deg);
+}
+
+.parent .pagination span.active {
+  background-color: #333;
+  transform: scale(1.5);
+}
+
+/* .parent .pagination span.active::after{
     content: "";
     position: absolute;
-   top:0;
-   left: 0;
-   margin-left: -20px;
-    width: 4px;
-    height: 100%;
-    background-color: rgb(255, 255, 255);
-}
+    top:20px;
+    left: 10px;
+    width:140px;
+    height: 140px;
+    border:19px solid white;
+border-radius: 50%;
 
-.slider .search{
-    color: black;
-    width: 90%;
-    height:60px;
-    padding: 10px;
-    background-color: white;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin:100px auto ;
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
-    gap: 30px;
-    border-radius: 30px;
-}
-.slider .search input{
-    width: 100%;
-    margin: auto !important;
-    font-size: 1.1rem;
-    padding: 10px 0;
-    text-indent: 20px;
-    border: none;
-    outline: none;
-}
-
-.slider .search input::placeholder{
-    font-weight: 600;
-    font-size: 1rem;
-}
-
-
-
-
-.slider .search_box_icons{
-display: flex;
-justify-content: center;
-align-items: center;
-gap: 10px;
-}
-*/
+} */
