--- a/src/style/Slider.css
+++ b/src/style/Slider.css
@@ -53,42 +53,48 @@
 }
 
 .parent .pagination span.active .circles {
-  width:350px;
-  height:350px;
   /* background-color: aquamarine; */
   position: absolute;
-  right: 40%;
-  bottom: 40%;
-  transform: translate(50%,50%);
+  right: 30%;
+  bottom: 30%;
+  transform: translate(50%, 50%);
   z-index: -1;
   border-radius: 50%;
-  border:40px solid rgba(255, 255, 255, 0.217);
+  border: 40px solid rgba(255, 255, 255, 0.217);
 }
 .pagination span.active:nth-of-type(1) {
   /* background-color: red; */
- margin: 20px;
+  margin: 20px;
+  width: 266px;
+  height: 266px;
 }
 
 .pagination span.active div.circles:nth-of-type(2) {
   /* background-color: green; */
- margin: 20px;
-
+  margin: 40px;
+  width: 276px;
+  height: 276px;
 }
 
 .pagination span.active div.circles:nth-of-type(3) {
   /* background-color: blue; */
- margin: 30px;
-
+  margin: 60px;
+  width: 286px;
+  height: 286px;
 }
 
 .pagination span.active div.circles:nth-of-type(4) {
   /* background-color: rgb(4, 246, 69); */
-margin: 40px;
+  margin: 40px;
+  width: 296px;
+  height: 296px;
 }
 
 .pagination span.active div.circles:nth-of-type(5) {
   /* background-color: rgb(92, 68, 186); */
-  margin: 50px;
+  margin: 80px;
+  width: 306px;
+  height: 306px;
 }
 
 .parent .pagination span img {
@@ -99,18 +105,35 @@ margin: 40px;
 }
 
 .parent .pagination span.active {
+  position: relative;
   background-color: #333;
   transform: scale(1.5);
 }
 
-/* .parent .pagination span.active::after{
-    content: "";
-    position: absolute;
-    top:20px;
-    left: 10px;
-    width:140px;
-    height: 140px;
-    border:19px solid white;
-border-radius: 50%;
-
-} */
+.parent .pagination span.active .animated_line {
+    width: 5px;
+    height: 200px;
+  background-color: rgb(255, 255, 255);
+  position: absolute;
+  right: 50%;
+  bottom: -50%;
+  transform: translateX(50%) translateY(0);
+  animation-name: line_smooth;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-fill-mode: forwards;
+  animation-direction: normal;
+  z-index: -1;
+  margin-bottom: 150px;
+}
+@keyframes line_smooth {
+  0% {
+    transform: translateX(50%) translateY(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(50%) translateY(200px);
+    opacity: 0;
+  }
+}
