--- a/src/style/Slider.css
+++ b/src/style/Slider.css
@@ -10,6 +10,7 @@
   position: relative;
   display: flex;
   justify-content: center;
+  overflow: hidden;
 }
 
 .parent .slider-wrapper {
@@ -25,81 +26,141 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  filter: grayscale(0.6);
 }
 
-.parent .pagination {
-  /* background-color: aqua; */
-  display: flex;
-  justify-content: center;
+.slider-wrapper .card-img .slide_txt {
+  font-family: "Cinzel";
+  font-weight: 700;
+  line-height: 120px;
+  font-size: 128px;
+  background: linear-gradient(to right, #ffffff, #999999);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text; /* for Firefox */
+  color: transparent; /* fallback */
+  z-index: 30;
   position: absolute;
-  right: -150px;
+  top: 0;
+  left: 0;
+}
+
+/* ----------------------------------------------------------------- */
+
+.parent .pagination {
+  /* background-color: rgb(216, 140, 222); */
+  height: 160px;
+  width: 660px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 24px;
+  position: absolute;
+  right: 0;
   top: 50%;
+  margin-right: -180px;
+  transform: translate(-50%, -50%);
   transform: rotate(-270deg);
   z-index: 20;
+}
+.parent .pagination span .slide-info {
+  display: none;
+  color: white;
+  font-weight: 700;
+}
+
+.parent .pagination span .slide-info h1 {
+  font-family: "Cinzel";
+  font-size: 56px;
+  line-height: 64px;
+}
+
+.parent .pagination span .slide-info p {
+  font-family: "Lato";
+  font-size: 20px;
+  line-height: 40px;
+  letter-spacing: 1px;
+}
+
+.parent .pagination span.active .slide-info {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  width: 479px;
+  height: 237px;
+  /* background-color: rgb(0, 255, 255); */
+  position: absolute;
+  top: 500px;
+  transform: rotate(-90deg);
+  z-index: 5;
 }
 
 .parent .pagination span {
   position: relative;
-  width: 256px;
-  height: 256px;
+  width: 160px;
+  height: 160px;
   border-radius: 50%;
-  /* overflow: hidden; */
-  margin: 0 40px;
-  /* background-color: #ccc; */
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
-  transform: scale(1);
   transition: transform 0.5s ease-in-out;
 }
 
-.parent .pagination span.active .circles {
-  /* background-color: aquamarine; */
+.parent .circle {
+  width: 100%;
+  height: 100%;
   position: absolute;
-  right: 30%;
-  bottom: 30%;
-  transform: translate(50%, 50%);
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
   z-index: -1;
+}
+
+.parent .circle .circles {
+  width: 300px;
+  height: 300px;
   border-radius: 50%;
-  border: 40px solid rgba(255, 255, 255, 0.217);
-}
-.pagination span.active:nth-of-type(1) {
-  /* background-color: red; */
-  margin: 20px;
-  width: 266px;
-  height: 266px;
+  /* background-color: black; */
+  position: absolute;
+  z-index: -1;
 }
 
-.pagination span.active div.circles:nth-of-type(2) {
-  /* background-color: green; */
-  margin: 40px;
-  width: 276px;
-  height: 276px;
+.parent span.active .circle .circles:nth-of-type(1) {
+  background-color: rgba(255, 255, 255, 0.25);
+  transform: translateX(30px);
 }
 
-.pagination span.active div.circles:nth-of-type(3) {
-  /* background-color: blue; */
-  margin: 60px;
-  width: 286px;
-  height: 286px;
+.parent span.active .circle .circles:nth-of-type(2) {
+  background-color: rgba(255, 255, 255, 0.25);
+
+  transform: translateX(-30px);
 }
 
-.pagination span.active div.circles:nth-of-type(4) {
-  /* background-color: rgb(4, 246, 69); */
-  margin: 40px;
-  width: 296px;
-  height: 296px;
+.parent span.active .circle .circles:nth-of-type(3) {
+  background-color: rgba(255, 255, 255, 0.25);
+
+  transform: translateY(-30px);
 }
 
-.pagination span.active div.circles:nth-of-type(5) {
-  /* background-color: rgb(92, 68, 186); */
-  margin: 80px;
-  width: 306px;
-  height: 306px;
+.parent span.active .circle .circles:nth-of-type(4) {
+  background-color: rgba(255, 255, 255, 0.25);
+
+  transform: translateY(30px);
+}
+
+.parent span.active .circle .circles:nth-of-type(5) {
+  background-color: rgba(255, 255, 255, 0.22);
+
+  transform: translate(0);
 }
 
 .parent .pagination span img {
-  width: 256px;
-  height: 256px;
+  width: 160px;
+  height: 160px;
   border-radius: 50%;
   transform: rotate(-90deg);
 }
@@ -107,33 +168,46 @@
 .parent .pagination span.active {
   position: relative;
   background-color: #333;
-  transform: scale(1.5);
+  transform: scale(1.1);
+}
+
+.parent .pagination span.active img {
+  width: 256px;
+  height: 256px;
 }
 
 .parent .pagination span.active .animated_line {
-    width: 5px;
-    height: 200px;
+  width: 3px;
+
   background-color: rgb(255, 255, 255);
   position: absolute;
   right: 50%;
-  bottom: -50%;
   transform: translateX(50%) translateY(0);
   animation-name: line_smooth;
-  animation-duration: 2s;
+  animation-duration: 3s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
-  animation-fill-mode: forwards;
-  animation-direction: normal;
   z-index: -1;
-  margin-bottom: 150px;
+
 }
+
 @keyframes line_smooth {
   0% {
-    transform: translateX(50%) translateY(0);
-    opacity: 1;
+    transform: translateY(0px);
+    height: 200px;
   }
+
+  50% {
+    height: 200px;
+
+  }
+
+  75%{
+    height: 200px;
+  }
+
   100% {
-    transform: translateX(50%) translateY(200px);
-    opacity: 0;
+    transform: translateY(280px);
+    height: 0;
   }
 }
