--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -1,7 +1,7 @@
 .header {
   width: 100%;
   height: 64px;
-  background: rgba(38, 39, 40, 0.96);
+  background: rgba(0, 0, 0, 0.172);
   backdrop-filter: blur(16px);
   display: flex;
   justify-content: space-between;
@@ -9,6 +9,8 @@
   gap: 109px;
   /* position: relative; */
     position: fixed;
+    top: 0;
+    left: 0;
   z-index: 200;
 }
 
