--- a/src/style/Slider.css
+++ b/src/style/Slider.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 .parent {
-  /* margin-top: 64px; */
+  margin-top: 64px;
   width: 100%;
   height: 100vh;
   background-color: rgb(220, 216, 216);
