--- a/src/style/Locations.css
+++ b/src/style/Locations.css
@@ -2,12 +2,24 @@
   display: flex;
   margin-bottom: 200px;
 }
-
+@media (max-width:991px) {
+    .proj-locations{
+        flex-wrap: wrap;
+    }
+}
 .proj-locations .admin-cap {
   flex: 50%;
   overflow: hidden;
   border-top-left-radius: 16px;
   border-bottom-left-radius: 16px;
+}
+@media (max-width:991px) {
+    .proj-locations .admin-cap {
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+    border-top-left-radius:0;
+  border-bottom-left-radius:0;
+}
 }
 
 .proj-locations .admin-cap img {
@@ -26,6 +38,17 @@
   justify-content: center;
   align-items: center;
 }
+
+@media (max-width:991px) {
+ .proj-locations .prime-location {
+  border-top-right-radius:0;
+  border-bottom-right-radius:0;
+ border-bottom-right-radius:16px;
+  border-bottom-left-radius:16px;
+}
+}
+
+
 .proj-locations .prime-location .prime-location-container {
   width: 100%;
   max-width: 788px;
@@ -33,6 +56,12 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
+}
+
+@media (max-width:991px) {
+    .proj-locations .prime-location .prime-location-container {
+        height: 100%;
+    }
 }
 
 .proj-locations
@@ -55,6 +84,16 @@
   font-size: 48px;
   line-height: 56px;
   text-align: center;
+}
+
+@media (max-width:991px){
+    .proj-locations
+  .prime-location
+  .prime-location-container
+  .prime-location-info-1
+  h2{
+    margin-top: 50px;
+  }
 }
 
 .proj-locations
@@ -124,4 +163,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+
+@media (max-width:991px){
+    
+.proj-locations .prime-location .prime-location-container button {
+    margin:20px auto;
+}
 }
